--- a/1_introduction/2_objetivos.tex
+++ b/1_introduction/2_objetivos.tex
@@ -11,10 +11,9 @@ El principal objetivo de esta tesis es:
 Para alcanzar dicho objetivo, es necesario primero responder a diferentes preguntas de investigación. Para dar respuesta a las mismas se llevará a cabo una \emph{Revisión Sistemática de la Literatura} (SLR, Systematic Literature Review). Las preguntas de investigación a las que se tratará de dar respuesta son las siguientes:
 
 \begin{itemize}
-\item Q1. ¿Qué competencias se han evaluado de forma automática o asistida por ordenador a partir del uso de los entornos virtuales?
+\item Q1. ¿Qué competencias se han evaluado de forma automática o asistida por ordenador a partir de la actividad de los estudiantes en los entornos virtuales?
 \item Q2. ¿Qué métodos se utilizan para evaluar competencias genéricas mediante el uso de entornos virtuales?
-\item Q3. ¿Son utilizados los registros de actividad de los entornos virtuales para la evaluación?
-\item Q4. ¿Qué técnicas utilizan los métodos basados en evidencias?
+\item Q3. ¿Qué técnicas se utilizan para evaluar competencias genéricas a partir de los registros de actividad de un entorno virtual?
 \end{itemize}
 
 Hay muchos trabajos en la literatura que abordan la evaluación de competencias genéricas de los estudiantes. De estos queremos obtener información de aquellos que buscan la automatización del proceso para facilitar la labor del docente, centrándonos sobre todo en qué competencia es la que evalúan. Es evidente que encontraremos muchos trabajos que abordan la evaluación de alguna competencia genérica con actividades manuales. Sin embargo, este tipo de trabajo sufren generalmente problemas de escalabilidad, por lo que bajo esta premisa los descartaremos en este análisis.
