--- a/9_backmatter/declaration.tex
+++ b/9_backmatter/declaration.tex
@@ -25,12 +25,12 @@ Name Surname
 and 
 Name Surname
 at 
-the University of Deusto.
+the University Cádiz.
 
 \vspace{10mm}
 
 % City
-Bilbao,
+Puerto Real,
 
 % Signature figure
 
@@ -57,7 +57,7 @@ Bilbao,
 \noindent
 This dissertation was finished writing 
 in 
-Bilbao
+Jerez de la Frontera
 on
 % Date
 \today 
