--- a/dissertation.tex
+++ b/dissertation.tex
@@ -73,7 +73,7 @@
 
 \begin{document}
 
-\selectlanguage{british}
+\selectlanguage{spanish}
 
 % sets line spacing
 \renewcommand\baselinestretch{1.2}
@@ -117,7 +117,7 @@
 \include{0_frontmatter/acknowledgement}
 
 % As abstract contains various languages we set the main language again
-\selectlanguage{british}
+\selectlanguage{spanish}
 
 
 %: ----------------------- contents ------------------------
