Estado del arte

--- a/1_introduction/2_objetivos.tex
+++ b/1_introduction/2_objetivos.tex
@@ -8,7 +8,7 @@ El principal objetivo de esta tesis es:
 \textbf{Evaluar a los estudiantes en el desempeño de sus competencias genéricas mediante indicadores procedentes de los registros de actividades de aprendizaje}
 \bigskip
 
-Para alcanzar dicho objetivo, es necesario primero responder a diferentes preguntas de investigación. Para dar respuesta a las mismas se llevará a cabo una \emph{Revisión Sistemática de la Literatura} (SLR, Systematic Literature Review). Las preguntas de investigación a las que se tratará de dar respuesta son las siguientes:
+Para alcanzar dicho objetivo, es necesario primero responder a diferentes preguntas de investigación. Para dar respuesta a las mismas se llevará a cabo una revisión sistemática de la literatura. Las preguntas de investigación a las que se tratará de dar respuesta son las siguientes:
 
 \begin{itemize}
 \item Q1. ¿Qué competencias se han evaluado de forma automática o asistida por ordenador a partir de la actividad de los estudiantes en los entornos virtuales?
