--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -232,6 +232,47 @@ year = {2012}
   publisher={Elsevier}
 }
 
+@inproceedings{alAjlan:2008,
+  title={Why moodle},
+  author={Al-Ajlan, Ajlan and Zedan, Hussein},
+  booktitle={Future Trends of Distributed Computing Systems, 2008. FTDCS'08. 12th IEEE International Workshop on},
+  pages={58--64},
+  year={2008},
+  organization={IEEE}
+}
+
+@article{podgorelec:2011,
+  title={Taking advantage of education data: Advanced data analysis and reporting in virtual learning environments},
+  author={Podgorelec, V and Kuhar, S},
+  journal={Elektronika ir Elektrotechnika},
+  volume={114},
+  number={8},
+  pages={111--116},
+  year={2011}
+}
+
+@inproceedings{petersen:2008,
+  title={Systematic mapping studies in software engineering},
+  author={Petersen, Kai and Feldt, Robert and Mujtaba, Shahid and Mattsson, Michael},
+  booktitle={12th International Conference on Evaluation and Assessment in Software Engineering},
+  volume={17},
+  number={1},
+  year={2008},
+  organization={sn}
+}
+
+% SMS
+
+@article{fidalgo:2015,
+  title={Using Learning Analytics to improve teamwork assessment},
+  author={Fidalgo-Blanco, {\'A}ngel and Sein-Echaluce, Mar{\'\i}a Luisa and Garc{\'\i}a-Pe{\~n}alvo, Francisco J and Conde, Miguel {\'A}ngel},
+  journal={Computers in Human Behavior},
+  volume={47},
+  pages={149--156},
+  year={2015},
+  publisher={Elsevier}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
