--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -25,60 +25,79 @@ Personally, I think it does help, that it makes a beneficial difference, but the
 
 %------------------------------------------------------------------------- 
 
-El objetivo de este capítulo, tal como se describió en la introducción, es la localización de trabajos relacionados con la tecnología para la mejora del aprendizaje (TEL) cuyo fin sea la evaluación de competencias de manera automática. En la era de la Web 2.0, se está popularizando la integración y personalización de contenidos web de diferentes fuentes. Esta integración y personalización podría impulsar la implementación de pasarelas con fines de educación avanzada, y así convertir los datos en accesibles y reutilizables \cite{Wenjun:2008}.
+Los VLEs almacenan información de estudiantes, profesores, cursos, tareas, trabajos, etc. Estos elementos se relacionan y configuran para ofrecer al usuario una experiencia de curso virtual. Estos cursos son de gran importantacia hoy en día, siendo el soporte virtual de clases presenciales o incluso siendo el único medio donde unas clases o un curso se imparte. Las clases virtuales presentan numerosas ventajas con respecto a las clases tradicionales. Por un lado se elimina la limitación geográfica que tienen las clases tradicionales, además de que la oferta y variedad de cursos ofrecidos siempre será mayor. Para los estudiantes presenta otras ventajas como la flexibilidad de horario, permitiéndoles compatibilizar los estudios con una vida laboral sin renunciar a crecer profesionalmente y sobre todo, permitiéndoles estar en contacto permante con otros estudiantes y profesores mediante diferentes herramientas (foros, chats, ... etc.)~\cite{alAjlan:2008}.
 
-Los LMS ó VLE almacenan información de estudiantes, profesores, cursos, tareas, trabajos, etc. Estos elementos se relacionan y configuran para ofrecer al usuario una experiencia de curso virtual. Haciendo todos estos datos almacenados accesibles, se podría sacar partido a los mismos con fines científicos. Y tal como se comentó en la introducción, para que esta evaluación de competencias sea escalable y más aún cuando el número de alumnos es importante, no queda otra alternativa que hacerlo de manera automatizada.
+% VENTAJAS: http://oedb.org/ilibrarian/10-advantages-to-taking-online-classes/
+
+Pero además de todo lo anterior, un VLE almacena una gran cantidad de información que adecuadamente analizada y presentada podria ser de gran utilidad para los profesores para monitorizar el trabajo de sus estudiantes~\cite{podgorelec:2011}. Cada archivo, cada acceso o cada tarea realizada por cada estudiante queda registrada en el sistema. Por desgracia, esta información no esta siempre a disposición del profesor, y si lo está, require un filtrado para poder ser utilizada~\cite{Chebil:2012}. En \cite{fidalgo:2015}, se definen algunos indicadores para evaluar el desempeño de los estudiantes en la competencia del trabajo en equipo. Estos indicadores reflejan las interacciones de los estudiantes en el foro del VLE.
+
+El objetivo de este capítulo es establecer la base teórica sobre la que se sustenta esta tesis doctoral. Se comenzará definiendo las preguntas de investigación, a las que se dará respuesta mediante un \emph{Estudio Sistemático de Mapeo} (\emph{SMS: Systematic Mapping Study}) aplicado a la ingenieria del software siguiendo las directrices descritas por Petersen~\cite{Petersen:2008}.
 
 \section{Preguntas de investigación}
 
-En este punto, hemos de plantearnos cuáles son las cuestiones que necesitamos resolver para llevar a cabo nuestra investigación. Necesitamos saber en qué punto se haya el desarrollo por parte de la comunidad científica en lo que se refiere al uso de los registros de los entornos de aprendizaje para evaluar las competencias genéricas. Para ello planteamos la primera pregunta: \emph{¿Cuáles son las competencias que se han evaluado de forma automática o asistida por ordenador a partir del uso de los entornos virtuales?}
-
-Además, necesitamos saber de qué forma lo hace, qué métodos y técnicas se utilizan para este fin. Para eso se plantean las preguntas segunda (\emph{¿Qué herramientas o metodologías se utilizan para evaluar competencias mediante el uso de los entornos virtuales?}) y tercera (\emph{¿Con qué técnicas se pueden obtener evidencias objetivas del desarrollo de las siguientes competencias en un entorno virtual?}).
-
-Finalmente se necesita saber si los registros de interacción de un sistema LMS se están utilizando para la evaluación: \emph{¿Son utilizados los registros de actividad de los entornos virtuales para la evaluación?}.
+El objetivo principal de esta tesis doctoral es \emph{evaluar a los estudiantes en el desempeño de sus competencias genéricas mediante indicadores procedentes de los registros de actividades de aprendizaje}. Para abordar este objetivo ha de conocerse primero el estado del arte, dando respuesta para ello a diferentes preguntas de investigación. Las cuestiones habrán de dar repuesta a interrogantes tales cómo cuáles son las competencias genéricas que se han evaluado haciendo uso de la informática, asi cómo qué métodos se han utilizado  y si se están usando para este fin los registros de actividad de los entornos virtuales.
 
 \bigskip
-En resumen, las preguntas de investigación son las siguientes:
-\begin{enumerate}
-\item ¿Cuáles son las competencias que se han evaluado de forma automática o asistida por ordenador a partir del uso de los entornos virtuales?
-\item ¿Qué herramientas o metodologías se utilizan para evaluar competencias mediante el uso de los entornos virtuales?
-\item ¿Con qué técnicas se pueden obtener evidencias objetivas del desarrollo de las siguientes competencias en un entorno virtual?.
-\item ¿Son utilizados los registros de actividad de los entornos virtuales para la evaluación?
-\end{enumerate}
+Por tanto, partiendo del objetivo principal, se definen las siguiente preguntas de investigación:
+\begin{itemize}
+\item Q1. ¿Qué competencias se han evaluado de forma automática o asistida por ordenador a partir de la actividad de los estudiantes en los entornos virtuales?
+\item Q2. ¿Qué métodos se utilizan para evaluar competencias genéricas mediante el uso de entornos virtuales?
+\item Q3. ¿Qué técnicas se utilizan para evaluar competencias genéricas a partir de los registros de actividad de un entorno virtual?
+\end{itemize}
 
 \section{Metodología}
 
 \subsection{Protocolo de revisión}
 
-La definición del protocolo de revisión requiere la realización de una serie de acciones para obtener la bibliografía de nuestro estudio. Comenzaremos indicando los motores de búsqueda que vamos a utilizar, qué términos de búsqueda utilizaremos en dichos motores y las herramientas de soporte a la revisión. Además se mostrarán qué criterios de inclusión de la bibliografía se siguen y el procedimiento de selección.
+La definición del protocolo de revisión requiere la realización de una serie de pasos para obtener la bibliografía de nuestro estudio. Los pasos a seguir son los siguientes:
+\begin{enumerate}
+\item Selección de motores de búsqueda (sección \ref{sec:MotoresBusqueda}).
+\item Definición de los términos de búsqueda (sección \ref{sec:TerminosBusqueda}).
+\item Determinación de los criterios de selección (sección \ref{sec:CriteriosBusqueda}).
+\item Clasificación para la extracción de los datos (sección \ref{sec:EsquemaBusqueda}).
+\end{enumerate}
+
+%Comenzaremos indicando los motores de búsqueda que vamos a utilizar, qué términos de búsqueda utilizaremos en dichos motores y las herramientas de soporte a la revisión. Además se mostrarán qué criterios de inclusión de la bibliografía se siguen y el procedimiento de selección.
 
 \subsection{Motores de búsqueda}
-Una vez que las preguntas de la investigación se han establecido, hay que identificar con precisión la estrategia de búsqueda a seguir. En nuestro procedimiento, para encontrar la bibliografía, se realizarán consultas en las siguientes bibliotecas digitales: Wiley Online Library, World Scientific Net, Springer, ACM Digital Library, IEEE Digital Library (Xplore) y Scopus.
+\label{sec:MotoresBusqueda}
+Para encontrar la bibliografía, se realizarán consultas en las siguientes bibliotecas digitales: 
+\begin{itemize}
+\item Web of Science
+\item Wiley Online Library
+\item Science Direct
+\item IEEE Digital Library (Xplore)
+\end{itemize}
 
 \subsection{Términos de búsqueda}
 \label{sec:TerminosBusqueda}
-Existen muchos términos que pueden utilizarse para referirse a la evaluación de competencias genéricas de manera automatizada o asistida. Por la naturaleza de nuestro trabajo, debemos contemplar siempre en las palabras de búsqueda los términos \emph{assessment} y \emph{generic skills} o \emph{generic competences}. Realizar la búsqueda por el término \emph{Assessment of generic skills} o \emph{assessing generic skills} nos planteaba la primera problemática, y es que el número de artículos devueltos era muy reducido. Por ejemplo, en la \emph{Wiley Online Library} la búsqueda del término exacto \emph{generic skills assessment} devolvió un único resultado. Sin embargo, debilitar la búsqueda con términos como \emph{generic competences} o \emph{generic skills} junto con la palabra \emph{assessment} daba un número de resultados muy elevado. En la misma biblioteca, buscar por los términos \emph{``generic skills`` and student and assessment} nos devolvía 609 resultados. En primera instancia se probó añadiendo términos como  \emph{E-Learning}, \emph{computer-assisted} o \emph{mobile learning}. Sin embargo, incluir términos de este tipo reducían también drásticamente el número de resultados obtenidos en la búsqueda, no llegando a obtenerse bibliografía más significativa que si no se incluyen. Por tanto, a tenor de las pruebas se decide eliminar de la búsqueda ese tipo de términos. Por otro lado, sí se incluyen acrónimos de diferentes entornos virtuales relacionados con las TEL, como son: \emph{TEL}, \emph{LMS}, \emph{ICT} (Information and Communications Technology), \emph{CBI} (Content-Based Instruction). Y tras varias pruebas, se descartan también de la búsqueda términos como `\emph{ICE} (Integrated Collaboration Environment) y \emph{CSCL} (Computer Supported Collaborative Learning), debido a que son términos que en conjunción con los términos principales de nuestra búsqueda no suelen aparecer y los resultados de estas búsquedas eran nulos. Un ejemplo de esto se refleja en una de las consultas realizadas en \emph{Scopus}, dónde los términos \emph{((``student assessment`` OR ``assessment of students``) AND (``generic skills`` OR ``generic competences``)) AND CSCL} no devolvían ningún resultado. La combinación de los términos de búsqueda empleados en la investigación, así como a los motores de búsqueda que fueron aplicados en cada una pueden comprobarse en la tabla \ref{tab:ResumenBusqueda}.
+Existen muchos términos que pueden utilizarse para referirse a la evaluación de competencias genéricas de manera automatizada o asistida. Por la naturaleza de nuestro trabajo, debemos contemplar siempre en las palabras de búsqueda los términos \emph{assessment} y \emph{generic skills} o \emph{generic competences}. Realizar la búsqueda por el término \emph{Assessment of generic skills} o \emph{assessing generic skills} nos planteaba la primera problemática, y es que el número de artículos devueltos era muy reducido. Por ejemplo, en la \emph{Wiley Online Library} la búsqueda del término exacto \emph{generic skills assessment} devolvió un único resultado. Sin embargo, debilitar la búsqueda con términos como \emph{generic competences} o \emph{generic skills} junto con la palabra \emph{assessment} daba un número de resultados muy elevado. En la misma biblioteca, buscar por los términos \emph{``generic skills`` and student and assessment} nos devolvía 609 resultados. En primera instancia se probó añadiendo términos como  \emph{E-Learning}, \emph{computer-assisted} o \emph{mobile learning}. Sin embargo, incluir términos de este tipo reducían también drásticamente el número de resultados obtenidos en la búsqueda, no llegando a obtenerse bibliografía más significativa que si no se incluyen. Por tanto, a tenor de las pruebas se decide eliminar de la búsqueda ese tipo de términos. La combinación de los términos de búsqueda empleados en la investigación, así como a los motores de búsqueda que fueron aplicados en cada una pueden comprobarse en la tabla \ref{tab:ResumenBusqueda}.
+
+%Por otro lado, sí se incluyen acrónimos de diferentes entornos virtuales relacionados con las TEL, como son: \emph{TEL}, \emph{LMS}, \emph{ICT} (Information and Communications Technology), \emph{CBI} (Content-Based Instruction). Y tras varias pruebas, se descartan también de la búsqueda términos como `\emph{ICE} (Integrated Collaboration Environment) y \emph{CSCL} (Computer Supported Collaborative Learning), debido a que son términos que en conjunción con los términos principales de nuestra búsqueda no suelen aparecer y los resultados de estas búsquedas eran nulos. Un ejemplo de esto se refleja en una de las consultas realizadas en \emph{Scopus}, dónde los términos \emph{((``student assessment`` OR ``assessment of students``) AND (``generic skills`` OR ``generic competences``)) AND CSCL} no devolvían ningún resultado. 
 
 \begin{table}[H]
   \begin{center}
-  \begin{tabular}{| m{4cm} | m{7cm} | m{3cm} |}
+  \begin{tabular}{| p{3cm} | p{5cm} | p{2cm} | p{3cm} |}
     \hline
-    SOURCE & SEARCH TERMS & SEARCH SCOPE \\
+    SOURCE & SEARCH TERMS & SEARCH SCOPE & PUBLICATION\\
     \hline
     \hline
-    Wiley Online Library & assessment AND ``generic competences`` OR ``generic skills`` AND (TEL OR ICT OR CBI) & in All Fields\\
+    Web of Science & ((``generic competences`` OR ``generic skills``) AND assessment) & in All Fields & Journals\\
     \hline
-    World Scientific Net & ``generic competences`` OR ``generic skills`` AND assessment & Anywhere in article\\
+    Wiley Online Library & ``generic competences`` AND assessment & in All Fields & Journals and Conferences\\
     \hline
-    Springer & (``generic skills`` OR ``generic competences``) AND  students AND (TEL OR CBI OR ICT) & All fields (Including full text)\\
+    Science Direct & (``generic competences``) AND assessment) & in All Fields & Journals\\
     \hline
-    ACM Digital Library & (assessment and ``generic skills``) and (TEL or LMS or ICT or CBI) & Any field (title, abstract, review)\\
+    IEEE Digital Library (Xplore) & ((``generic competences``) AND assessment) & in All Fields & Journals and Conferences\\
     \hline
-    ACM Digital Library & (assessment and ``generic competences``) and (TEL or LMS or ICT or CBI) & Any field (title, abstract, review)\\
-    \hline
-    IEEE Digital Library (Xplore) & (((TEL or LMS or ICT or CBI) AND (``generic skills`` OR ``generic competences``)) AND assessment) & Full text and metadata\\
-    \hline
-    Scopus & (((TEL or LMS or ICT or CBI) AND (``generic skills`` OR ``generic competences``)) AND assessment) & All fields (Including full text)\\
+
+%    Wiley Online Library & assessment AND ``generic competences`` OR ``generic skills`` AND (TEL OR ICT OR CBI) & in All Fields\\
+%    World Scientific Net & ``generic competences`` OR ``generic skills`` AND assessment & Anywhere in article\\
+%    Springer & (``generic skills`` OR ``generic competences``) AND  students AND (TEL OR CBI OR ICT) & All fields (Including full text)\\
+%    ACM Digital Library & (assessment and ``generic skills``) and (TEL or LMS or ICT or CBI) & Any field (title, abstract, review)\\
+%    ACM Digital Library & (assessment and ``generic competences``) and (TEL or LMS or ICT or CBI) & Any field (title, abstract, review)\\
+%	  IEEE Digital Library (Xplore) & (((TEL or LMS or ICT or CBI) AND (``generic skills`` OR ``generic competences``)) AND assessment) & Full text and metadata\\
+%    Scopus & (((TEL or LMS or ICT or CBI) AND (``generic skills`` OR ``generic competences``)) AND assessment) & All fields (Including full text)\\
     \hline
   \end{tabular}
 \end{center}
@@ -87,6 +106,7 @@ Existen muchos términos que pueden utilizarse para referirse a la evaluación d
 \end{table} 
 
 \subsection{Criterios de selección}
+\label{sec:CriteriosBusqueda}
 Para determinar si un trabajo debía formar parte de nuestra selección de estudios primarios se leyó tanto el título, como el resumen y las palabras clave. En ocasiones esto no fue suficiente, siendo necesario complementar la lectura anterior con una somera la lectura del artículo completo y más detallada de la introducción y las conclusiones.
 Nuestra búsqueda se centró en la localización de los trabajos que, habiendo sido obtenidos en el proceso de búsqueda anterior, vayan en línea con nuestro estudio y puedan ayudarnos a resolver las preguntas de investigación. Para ello, se realizó la proyección de los trabajos seleccionados utilizando los siguientes criterios de exclusión:
 \begin{itemize}
@@ -97,6 +117,7 @@ Nuestra búsqueda se centró en la localización de los trabajos que, habiendo s
 \end{itemize}
 
 \subsection{Esquema para la extracción de datos}
+\label{sec:EsquemaBusqueda}
 
 Para la extracción de la información se han dividido los trabajos de acuerdo a los siguientes tres aspectos: tipo de investigación, tipo de contribución y ámbito de aplicación de la investigación. A continuación se discute esta clasificación.
 
