--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -261,7 +261,459 @@ year = {2012}
   organization={sn}
 }
 
+@article{malehorn1994ten,
+  title={Ten measures better than grading},
+  author={Malehorn, Hal},
+  journal={The Clearing House},
+  volume={67},
+  number={6},
+  pages={323--324},
+  year={1994},
+  publisher={Taylor \& Francis}
+}
+
 % SMS
+
+@article{DeXena2012educacion,
+title = "La educación empresarial en instituciones de educación superior venezolanas ",
+journal = "Estudios Gerenciales ",
+volume = "28",
+number = "125",
+pages = "51 - 58",
+year = "2012",
+note = "",
+issn = "0123-5923",
+doi = "http://dx.doi.org/10.1016/S0123-5923(12)70007-4",
+url = "http://www.sciencedirect.com/science/article/pii/S0123592312700074",
+author = "Leslie Borjas De Xena"
+}
+
+% Peer and self-assessment:
+
+@inproceedings{starcic2008sustaining,
+  title={Sustaining Teacher's Professional Development and Training through Web-Based Communities of Practice},
+  author={Starcic, Andreja Istenic},
+  booktitle={Applications and the Internet, 2008. SAINT 2008. International Symposium on},
+  pages={317--320},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{carreras2013promotion,
+  title={The promotion and assessment of generic skills from interdisciplinary teaching teams},
+  author={Carreras Mar{\'\i}n, Anna and Blasco, Yolanda and Badia-Mir{\'o}, Marc and Bosch Pr{\'\i}ncep, Manuela and Morillo, Isabel and Cair{\'o} i C{\'e}spedes, Gemma and Casares Vidal, Dolors},
+  booktitle={Comunicaci{\'o} presentada a: Proceedings of EDULEARN13 Conference, 1st-3rd July 2013, Barcelona, Spain. ISBN: 978-84-616-3822-2.(0201-0207)},
+  year={2013}
+}
+
+@article{lasa2013problem,
+  title={Problem Based Learning Implementation In The Degree Of Human Nutrition And Dietetics},
+  author={Lasa, A and Txurruka, I and Sim{\'o}n, E and Miranda, J},
+  journal={ICERI2013 Proceedings},
+  pages={1687--1692},
+  year={2013},
+  publisher={IATED}
+}
+
+@inproceedings{masip2013self,
+  title={Self-video recording for the integration and assessment of generic competencies},
+  author={Masip-{\'A}lvarez, Albert and Hervada-Sala, Carme and P{\`a}mies-G{\'o}mez, Teresa and Arias-Pujol, Antoni and Jaen-Fernandez, Carles and Rodriguez-Sorigue, Cristina and Romero-Duran, David and Nejjari-Akhi-Elarab, Fatiha and Alvarez-del-Castillo, M and Roca-Lefler, Marta and others},
+  booktitle={Global Engineering Education Conference (EDUCON), 2013 IEEE},
+  pages={436--441},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{khamis2012measurement,
+  title={Measurement of Students’ Performance Level in a Group Project by using Peer Review and Lecturer Assessment},
+  author={Khamis, Nor Kamaliana and Sulong, Abu Bakar},
+  journal={Procedia-Social and Behavioral Sciences},
+  volume={60},
+  pages={130--134},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{pinto2011assessment,
+  title={Assessment Of Self-Criticism Capacity Competence In Higher Education Students: Outcome Oriented Education},
+  author={Pinto, JJ and Arellano-Lopez, JM and Arufe-Martinez, MI and Barrera, MC and Caro, I and Castro, R and Coello, MD and Galindo, MD and Granado, MD and Gonz{\'a}lez, M and others},
+  journal={ICERI2011 Proceedings},
+  pages={2032--2039},
+  year={2011},
+  publisher={IATED}
+}
+
+@article{renau2010teaching,
+  title={Teaching And Learning Through Projects Using The Ict: Practice Of The English Writing Through Business Documents},
+  author={Renau, ML Renau and Viciedo, J Us{\'o}},
+  journal={ICERI2010 Proceedings},
+  pages={4700--4705},
+  year={2010},
+  publisher={IATED}
+}
+
+@article{marquez2010have,
+  title={Have Our Future Entrepreneurs An Ethical Commitment?},
+  author={M{\'a}rquez-Garc{\'\i}a, AM and Barreda-Tarrazona, R},
+  journal={ICERI2010 Proceedings},
+  pages={5780--5789},
+  year={2010},
+  publisher={IATED}
+}
+
+@article{sin2007evaluating,
+  title={Evaluating a method of integrating generic skills with accounting content based on a functional theory of meaning},
+  author={Sin, Samantha and Jones, Alan and Petocz, Peter},
+  journal={Accounting \& Finance},
+  volume={47},
+  number={1},
+  pages={143--163},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
+@article{mcloughlin2006beyond,
+  title={Beyond marks and measurement: Developing dynamic and authentic forms of e-assessment},
+  author={McLoughlin, Catherine and Luca, Joe},
+  journal={Who's learning? Whose technology},
+  pages={559--662},
+  year={2006}
+}
+
+@article{johnson2002encouraging,
+  title={Encouraging generic skills in science courses},
+  author={Johnson, Elizabeth and Herd, Susanna and Tisdall, Judith},
+  journal={Electronic Journal of Biotechnology},
+  volume={5},
+  number={2},
+  pages={22--23},
+  year={2002},
+  publisher={SciELO Chile}
+}
+
+@article{achcaoucaou2014competence,
+  title={Competence assessment in higher education: A dynamic approach},
+  author={Achcaoucaou, Fariza and Guitart-Tarr{\'e}s, Laura and Miravitlles-Matamoros, Paloma and N{\'u}{\~n}ez-Carballosa, Ana and Bernardo, Merc{\'e} and Bikfalvi, Andrea},
+  journal={Human Factors and Ergonomics in Manufacturing \& Service Industries},
+  volume={24},
+  number={4},
+  pages={454--467},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{chang2009international,
+  title={International creative tension study of university students in South Korea and Finland},
+  author={Chang, Yoon and Eklund, Tomas and Kantola, Jussi I and Vanharanta, Hannu},
+  journal={Human Factors and Ergonomics in Manufacturing \& Service Industries},
+  volume={19},
+  number={6},
+  pages={528--543},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{sevilla2012assessment,
+  title={Assessment of competences in designing online preparatory materials for the Cambridge First Certificate in English examination},
+  author={Sevilla-Pav{\'o}n, Ana and Mart{\'\i}nez-S{\'a}ez, Antonio and Gimeno-Sanz, Ana},
+  journal={Procedia-Social and Behavioral Sciences},
+  volume={34},
+  pages={207--211},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{ficapal2015learning,
+  title={e-Learning and Team-based Learning. Practical Experience in Virtual Teams},
+  author={Ficapal-Cus{\'\i}, Pilar and Boada-Grau, Joan},
+  journal={Procedia-Social and Behavioral Sciences},
+  volume={196},
+  pages={69--74},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{arno2011promoting,
+  title={Promoting reflection on science, technology, and society among engineering students through an EAP online learning environment},
+  author={Arno-Macia, Elisabet and Rueda-Ramos, Carmen},
+  journal={Journal of English for Academic Purposes},
+  volume={10},
+  number={1},
+  pages={19--31},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@inproceedings{piedra2010measuring,
+  title={Measuring collaboration and creativity skills through rubrics: Experience from UTPL collaborative social networks course},
+  author={Piedra, Nelson and Chicaiza, Janneth and L{\'o}pez, Jorge and Romero, Audrey and Tovar, Edmundo},
+  booktitle={Education Engineering (EDUCON), 2010 IEEE},
+  pages={1511--1516},
+  year={2010},
+  organization={IEEE}
+}
+
+% Teacher assessment
+
+@article{yang2014fine,
+  title={A fine-grained outcome-based learning path model},
+  author={Yang, Fan and Li, Frederick WB and Lau, Rynson WH},
+  journal={Systems, Man, and Cybernetics: Systems, IEEE Transactions on},
+  volume={44},
+  number={2},
+  pages={235--245},
+  year={2014},
+  publisher={IEEE}
+}
+
+@article{martin2013acquired,
+  title={Acquired Skills With The Implementation Of New Evaluation Methods At University Rey Juan Carlos},
+  author={Mart{\'\i}n-Brice{\~n}o, MR and Prashar, S},
+  journal={ICERI2013 Proceedings},
+  pages={4875--4878},
+  year={2013},
+  publisher={IATED}
+}
+
+@article{barbera2011assessment,
+  title={Assessment tools for the evaluation of generic skills development in students of business management},
+  author={Barber{\'a}, T and Estell{\'e}s, S and Dema, C and Devece, C},
+  journal={ICERI2011 Proceedings},
+  pages={965--972},
+  year={2011},
+  publisher={IATED}
+}
+
+@article{martin2010new,
+  title={New Methodologies In The Teaching And Evaluation Of The Competences “Teamwork” And “Oral And Written Communication” In The Civil Law Course Of The University Rey Juan Carlos},
+  author={Mart{\'\i}n-Brice{\~n}o, MR and D{\'\i}az-Pardo, G and Prashar, S},
+  journal={ICERI2010 Proceedings},
+  pages={4956--4961},
+  year={2010},
+  publisher={IATED}
+}
+
+@article{prashar2010competence,
+  title={Competence Based Teaching And Evaluation In The General Chemistry Course Of The University Rey Juan Carlos},
+  author={Prashar, S and Mart{\'\i}n-Brice{\~n}o, MR and D{\'\i}az-Pardo, G},
+  journal={ICERI2010 Proceedings},
+  pages={4931--4935},
+  year={2010},
+  publisher={IATED}
+}
+
+@article{serrano2013hiperion,
+  title={Hiperion: A fuzzy approach for recommending educational activities based on the acquisition of competences},
+  author={Serrano-Guerrero, Jesus and Romero, Francisco P and Olivas, Jose A},
+  journal={Information Sciences},
+  volume={248},
+  pages={114--129},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{casan2015developing,
+  title={Developing Writing Skills in The Classroom: A Corpus-based Analysis of Multi-Genre Structures},
+  author={Casa{\~n}-Pitarch, Ricardo and Calvo-Ferrer, Jos{\'e} Ram{\'o}n},
+  journal={Procedia-Social and Behavioral Sciences},
+  volume={198},
+  pages={74--83},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{guenaga2013serious,
+  title={Serious Games for the Development of Employment Oriented Competences},
+  author={Guenaga, Mariluz and Arranz, Sonia and Rubio Florido, Isabel and Aguilar, Eduardo and Ortiz de Guinea, Alex and Rayon, Alex and Bezanilla, Mara Jose and Menchaca, Iratxe},
+  journal={Tecnologias del Aprendizaje, IEEE Revista Iberoamericana de},
+  volume={8},
+  number={4},
+  pages={176--183},
+  year={2013},
+  publisher={IEEE}
+}
+
+@inproceedings{bedek2011behavioral,
+  title={From behavioral indicators to contextualized competence assessment},
+  author={Bedek, Michael and Petersen, Sobah Abbas and Heikura, Tuija},
+  booktitle={Advanced Learning Technologies (ICALT), 2011 11th IEEE International Conference on},
+  pages={277--281},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{ward2011developing,
+  title={Developing entrepreneurial accounting and finance competency using the ELLEIEC Virtual Centre for Enterprise},
+  author={Ward, Tim and Christophe, Saudemont},
+  booktitle={EAEEIE Annual Conference (EAEEIE), 2011 Proceedings of the 22nd},
+  pages={1--5},
+  year={2011},
+  organization={IEEE}
+}
+
+@inproceedings{rodriguez2010portfolio,
+  title={e-Portfolio: a tool to assess university students' skills},
+  author={Rodriguez-Donaire, Silvia and Garc{\'\i}a, Beatriz Amante and Del Olmo, Sonia Oliver},
+  booktitle={Information Technology Based Higher Education and Training (ITHET), 2010 9th International Conference on},
+  pages={114--124},
+  year={2010},
+  organization={IEEE}
+}
+
+@inproceedings{lacuesta2009active,
+  title={Active learning through problem based learning methodology in engineering education},
+  author={Lacuesta, Raquel and Palacios, Guillermo and Fern{\'a}ndez, Luis},
+  booktitle={Frontiers in Education Conference, 2009. FIE'09. 39th IEEE},
+  pages={1--6},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{benlloch2007adapting,
+  title={Adapting teaching and assessment strategies to enhance competence-based learning in the framework of the European convergence process},
+  author={Benlloch-Dualde, Jos{\'e}V and Blanc-Clavero, Sara},
+  booktitle={Frontiers In Education Conference-Global Engineering: Knowledge Without Borders, Opportunities Without Passports, 2007. FIE'07. 37th Annual},
+  pages={S3B--1},
+  year={2007},
+  organization={IEEE}
+}
+
+%Questionnarie
+
+@inproceedings{vizcarro2013assessment,
+  title={Assessment of problem solving in computing studies},
+  author={Vizcarro Guarch, Carmen and Martin Espinosa, Pilar and Cobos, Ruth and P{\'e}rez, Jorge E and Tovar Caro, Edmundo and Blanco Viejo, Gregoria and Bermudez Marin, Aurelio and Reyes Ruiz Gallardo, Jose},
+  booktitle={Frontiers in Education Conference, 2013 IEEE},
+  pages={999--1003},
+  year={2013},
+  organization={IEEE}
+}
+
+@article{lumsden2005assessment,
+  title={Assessment of personal qualities in relation to admission to medical school},
+  author={Lumsden, Mary Ann and Bore, Miles and Millar, Keith and Jack, Rachael and Powis, David},
+  journal={Medical education},
+  volume={39},
+  number={3},
+  pages={258--265},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+@article{ruizacarate2013soft,
+  title={Soft Skills: A Comparative Analysis Between Online and Classroom Teaching},
+  author={Ruizac{\'a}rate Varela, Carmen and Garcia Garcia, Maria Jesus and Gonzalez Garcia, Concepcion and Casado Sanchez, Jose Luis},
+  year={2013},
+  publisher={Montes}
+}
+
+@article{barbera2011design,
+  title={Design And Results Of The Collaborative Project-Based Learning In The Subject “Commercial Management” In Industrial Organization Engineering},
+  author={Barber{\'a}, T and Dema, C and Devece, C and Estell{\'e}s, S},
+  journal={EDULEARN11 Proceedings},
+  pages={3250--3258},
+  year={2011},
+  publisher={IATED}
+}
+
+@article{so2011mapping,
+  title={Mapping The Impact On Holistic Development: A Study Of The Relationship Between Generic Skills And Academic Discipline Among Hong Kong Associate Degree Students},
+  author={So, CHJ and Lai, SFH and Lam, D and So, YL},
+  journal={ICERI2011 Proceedings},
+  pages={6630--6638},
+  year={2011},
+  publisher={IATED}
+}
+
+@article{badcock2010developing,
+  title={Developing generic skills through university study: a study of arts, science and engineering in Australia},
+  author={Badcock, Paul BT and Pattison, Philippa E and Harris, Kerri-Lee},
+  journal={Higher Education},
+  volume={60},
+  number={4},
+  pages={441--458},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{aziz2007appraisal,
+  title={Appraisal of course learning outcomes using Rasch measurement: a case study in information technology education},
+  author={Aziz, Azrilah Abdul and Mohamed, Azlinah and Arshad, NoorHabibah and Zakaria, Sohaimi and Masodi, Mohd Saidfudin},
+  journal={International Journal of Systems Applications, Engineering \& Development},
+  volume={4},
+  number={1},
+  pages={164--172},
+  year={2007}
+}
+
+@inproceedings{rashid2008engineering,
+  title={Engineering students performance evaluation of generic skills measurement: ESPEGS model},
+  author={Rashid, Rozeha A and Abdullah, Razimah and Zaharim, Azami and Ghulman, Hamzah Ahmad and Masodi, Mohd Saidfudin and Mauri, JL and Zaharim, A and Kolyshkin, A and Hatziprokopiou, M and Lazakidou, A and others},
+  booktitle={WSEAS International Conference. Proceedings. Mathematics and Computers in Science and Engineering},
+  number={5},
+  year={2008},
+  organization={WSEAS}
+}
+
+@article{a2007outcome,
+  title={Outcome based education performance assessment: A computational model to measure electrical engineering subjects learning outcomes},
+  author={A Rashid, Rozeha and Mohamed, Ibrahim and Abdullah, Razimah and Zaharim, Azami and Masodi, Mohd and others},
+  journal={MATEMATIKA},
+  year={2007},
+  publisher={Department of Mathematical Sciences, Faculty of Science, Universiti Teknologi Malaysia}
+}
+
+@article{albergaria2011critical,
+  title={Critical thinking, questioning and creativity as components of intelligence},
+  author={Albergaria-Almeida, Patr{\'\i}cia},
+  journal={Procedia-Social and Behavioral Sciences},
+  volume={30},
+  pages={357--362},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{park2006moral,
+  title={Moral competence and character strengths among adolescents: The development and validation of the Values in Action Inventory of Strengths for Youth},
+  author={Park, Nansook and Peterson, Christopher},
+  journal={Journal of adolescence},
+  volume={29},
+  number={6},
+  pages={891--909},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{andre2011formal,
+  title={Formal model for assigning human resources to teams in software projects},
+  author={Andr{\'e}, Margarita and Baldoqu{\'\i}n, Mar{\'\i}a G and Acu{\~n}a, Silvia T},
+  journal={Information and Software Technology},
+  volume={53},
+  number={3},
+  pages={259--275},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@inproceedings{martinez2014teamwork,
+  title={Teamwork competence and academic motivation in computer science engineering studies},
+  author={Martinez, Jorge E Perez and Garc{\'\i}a Mart{\'\i}n, Javier and Alonso, Almudena Sierra},
+  booktitle={Global Engineering Education Conference (EDUCON), 2014 IEEE},
+  pages={778--783},
+  year={2014},
+  organization={IEEE}
+}
+
+@inproceedings{fernandez2011experience,
+  title={The experience of implementing a communication skills assessment in the first year course for undergraduate computing engineering students: A tool for further development of an international curriculum},
+  author={Fern{\'a}ndez, Marinela Garc{\'\i}a and Caro, Edmundo Tovar},
+  booktitle={Global Engineering Education Conference (EDUCON), 2011 IEEE},
+  pages={1081--1087},
+  year={2011},
+  organization={IEEE}
+}
+
+%Learning analytics
 
 @article{fidalgo:2015,
   title={Using Learning Analytics to improve teamwork assessment},
@@ -271,6 +723,15 @@ year = {2012}
   pages={149--156},
   year={2015},
   publisher={Elsevier}
+}
+
+@inproceedings{rayon2014web,
+  title={A web platform for the assessment of competences in Mobile Learning Contexts},
+  author={Rayon Jerez, Alex and Guenaga, Mariluz and N{\'u}{\~n}ez, Asier},
+  booktitle={Global Engineering Education Conference (EDUCON), 2014 IEEE},
+  pages={321--329},
+  year={2014},
+  organization={IEEE}
 }
 
 @comment{jabref-meta: selector_publisher:}
